<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_272343"
        tools:context=".others.ProfileOthersInfoFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/profile_speciality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/speciality"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/profile_education"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/education"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/speciality_text" />

                <TextView
                    android:id="@+id/profile_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/position"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/education_text" />

                <TextView
                    android:id="@+id/profile_favourite_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/favourite_genres_of_music"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/position_text" />

                <TextView
                    android:id="@+id/profile_introduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/introduction"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/favourite_music_text" />

                <TextView
                    android:id="@+id/profile_experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/experiences"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/introduction_text" />

                <EditText
                    android:id="@+id/introduction_text"
                    android:layout_width="0dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:enabled="false"
                    android:text="@string/no_music_no_life"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_introduction" />

                <EditText
                    android:id="@+id/speciality_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    android:inputType="none"
                    android:text="@string/flute_clarinet"
                    android:enabled="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_speciality" />

                <EditText
                    android:id="@+id/education_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/san_francisco_university"
                    android:enabled="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_education" />

                <EditText
                    android:id="@+id/position_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:inputType="none"
                    android:text="@string/second_flute"
                    android:enabled="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_position" />

                <EditText
                    android:id="@+id/favourite_music_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/white"
                    android:inputType="none"
                    android:text="@string/classic_opera"
                    android:enabled="false"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_favourite_music" />

                <RadioGroup
                    android:id="@+id/radio_group_experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profile_experience">

                    <RadioButton
                        android:id="@+id/button_orchestra_part1"
                        android:layout_width="180dp"
                        android:layout_height="42dp"
                        android:buttonTint="@color/white"
                        android:text="@string/orchestra"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/button_pit_orchestra"
                        android:layout_width="180dp"
                        android:layout_height="42dp"
                        android:buttonTint="@color/white"
                        android:text="@string/pit_orchestra"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/button_concert_band"
                        android:layout_width="180dp"
                        android:layout_height="42dp"
                        android:buttonTint="@color/white"
                        android:text="@string/concert_band"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/button_military_band"
                        android:layout_width="180dp"
                        android:layout_height="42dp"
                        android:buttonTint="@color/white"
                        android:text="@string/military_band"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/button_orchestra_part2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/radio_group_experience"
                    app:layout_constraintTop_toTopOf="@+id/radio_group_experience">

                    <RadioButton
                        android:id="@+id/button_string_ensemble"
                        android:layout_width="180dp"
                        android:layout_height="42dp"
                        android:buttonTint="@color/white"
                        android:text="@string/string_ensemble"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/button_wind_ensemble"
                        android:layout_width="180dp"
                        android:layout_height="42dp"
                        android:buttonTint="@color/white"
                        android:text="@string/wing_ensemble"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/button_concerto"
                        android:layout_width="180dp"
                        android:layout_height="42dp"
                        android:buttonTint="@color/white"
                        android:text="@string/concerto"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <RadioButton
                        android:id="@+id/button_none"
                        android:layout_width="180dp"
                        android:layout_height="42dp"
                        android:buttonTint="@color/white"
                        android:text="@string/none"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>